# expfloat

./: CMakeLists.txt  README.md
include/: expansion_math.h  test_apps.h  utils.h
src/: drecho.cpp  main.cpp
